Improved the misplaced comments test case.

--- a/ApexParserTest/ApexTestClasses/ClassWithComments_Formatted.cls
+++ b/ApexParserTest/ApexTestClasses/ClassWithComments_Formatted.cls
@@ -7,6 +7,7 @@ public with sharing class ClassTwo
      }
 
      // another constructor
+     // with a lot of misplaced comments
      public ClassTwo(String vin)
      {
      }
