--- a/ApexParserTest/ApexTestClasses/ClassWithComments.cls
+++ b/ApexParserTest/ApexTestClasses/ClassWithComments.cls
@@ -4,6 +4,7 @@ public with sharing class ClassTwo {
     }
 
     public ClassTwo(String vin) { // another constructor
+    // with a lot of misplaced comments
     }
 
     /*
