Cleaning up APEX Classes

--- a/SalesForceApexSharp/src/classes/ClassTwo.cls
+++ b/SalesForceApexSharp/src/classes/ClassTwo.cls
@@ -1,8 +1,7 @@
-public with sharing class ClassTwo {
-    public ClassTwo() {
-        System.debug('Test');
-    }
-
-    public ClassTwo(String vin) {
+public with sharing class ClassTwo implements ClassInterface
+{
+    public string getName()
+    {
+        return 'Jay';
     }
 }
