--- a/SalesForceApexSharp/src/classes/MethodDemo.cls
+++ b/SalesForceApexSharp/src/classes/MethodDemo.cls
@@ -1,44 +1,97 @@
 @RestResource(urlMapping='/demo/*/')
-global with sharing class MethodDemo extends ClassBaseDemo {
+global with sharing class MethodDemo extends ClassAbstract
+{
 
-    void arrayMethodTwoPrivate(List<string> stringArray) {
+    MethodDemo()
+    {
     }
 
-    global static Map<string, string> arrayMethodOne(Map<string, string> stringArray, List<string> stringArrayList) {
+    void StringVoid()
+    {
+    }
+
+    public void StringPublic()
+    {
+    }
+
+    string GetString()
+    {
+        return 'Hello World';
+    }
+
+    public string GetStringPublic()
+    {
+        return 'Hello World';
+    }
+
+    private string GetStringprivate()
+    {
+        return 'Hello World';
+    }
+
+    global string GetStringglobal()
+    {
+        return 'Hello World';
+    }
+
+    List<string> GetGenericList()
+    {
+        return new List<string>();
+    }
+
+    Map<string, string> GetGenericMap()
+    {
+        return new Map<string, string>();
+    }
+
+    void arrayMethodTwoPrivate(List<string> stringArray)
+    {
+    }
+
+    global static Map<string, string> arrayMethodOne(Map<string, string> stringArray, List<string> stringArrayList)
+    {
         return null;
     }
 
-    global static void arrayMethodTwo(List<string> stringArray) {
+    global static void arrayMethodTwo(List<string> stringArray)
+    {
     }
 
-    public Map<string, string> methodReturnMap(Map<string, string> mapList) {
+    public Map<string, string> methodReturnMap(Map<string, string> mapList)
+    {
         return null;
     }
 
     @HttpGet
     @HttpDelete
-    global static void getAndDelete() {
+    global static void getAndDelete()
+    {
     }
 
     @HttpPost
-    global static void post(string name , string accountNumber) {
+    global static void post(string name, string accountNumber)
+    {
         System.debug('Method Post');
     }
 
-    global static void genericMethod(List<string> stringList, Map<string, string> stringMap) {
+    global static void genericMethod(List<string> stringList, Map<string, string> stringMap)
+    {
         System.debug('Method Three');
     }
 
-
-    public override void methodThree() {
+    // From extending class
+    public override void methodThree()
+    {
         System.debug('Method Three');
     }
 
-    public List<string> methodReturnList() {
+    public List<string> methodReturnList()
+    {
         return null;
     }
 
-    public Map<string, string> methodReturnMap() {
+    public Map<string, string> methodReturnMap()
+    {
         return null;
     }
 
