--- a/SalesForceApexSharp/src/classes/ClassTwo.cls
+++ b/SalesForceApexSharp/src/classes/ClassTwo.cls
@@ -1,7 +1,5 @@
-public with sharing class ClassTwo implements ClassInterface
-{
-    public string getName()
-    {
+public with sharing class ClassTwo implements ClassInterface{
+    public string getName() {
         return 'Jay';
     }
 }
